--- a/Utils/swift-collections.xcworkspace/xcshareddata/xcschemes/PersistentCollections.xcscheme
+++ b/Utils/swift-collections.xcworkspace/xcshareddata/xcschemes/PersistentCollections.xcscheme
@@ -41,6 +41,7 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
+      enableASanStackUseAfterReturn = "YES"
       codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
