--- a/Utils/swift-collections.xcworkspace/xcshareddata/xcschemes/SortedCollections.xcscheme
+++ b/Utils/swift-collections.xcworkspace/xcshareddata/xcschemes/SortedCollections.xcscheme
@@ -17,7 +17,21 @@
                BlueprintIdentifier = "SortedCollections"
                BuildableName = "SortedCollections"
                BlueprintName = "SortedCollections"
-               ReferencedContainer = "container:">
+               ReferencedContainer = "container:..">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "SortedCollectionsTests"
+               BuildableName = "SortedCollectionsTests"
+               BlueprintName = "SortedCollectionsTests"
+               ReferencedContainer = "container:..">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -44,7 +58,7 @@
                BlueprintIdentifier = "SortedCollectionsTests"
                BuildableName = "SortedCollectionsTests"
                BlueprintName = "SortedCollectionsTests"
-               ReferencedContainer = "container:">
+               ReferencedContainer = "container:..">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -73,7 +87,7 @@
             BlueprintIdentifier = "SortedCollections"
             BuildableName = "SortedCollections"
             BlueprintName = "SortedCollections"
-            ReferencedContainer = "container:">
+            ReferencedContainer = "container:..">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
