[Heap] PriorityQueueModule → HeapModule

--- a/Sources/Collections/CMakeLists.txt
+++ b/Sources/Collections/CMakeLists.txt
@@ -1,7 +1,7 @@
 #[[
 This source file is part of the Swift Collections Open Source Project
 
-Copyright (c) 2021 Apple Inc. and the Swift project authors
+Copyright (c) 2021-2022 Apple Inc. and the Swift project authors
 Licensed under Apache License v2.0 with Runtime Library Exception
 
 See https://swift.org/LICENSE.txt for license information
@@ -10,9 +10,12 @@ See https://swift.org/LICENSE.txt for license information
 add_library(Collections
   Collections.swift)
 target_link_libraries(Collections PRIVATE
+  BitCollections
   DequeModule
+  HeapModule
   OrderedCollections
-  PriorityQueueModule)
+  PersistentCollections
+  )
 set_target_properties(Collections PROPERTIES
   INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
 
