--- a/Sources/HeapModule/CMakeLists.txt
+++ b/Sources/HeapModule/CMakeLists.txt
@@ -1,20 +1,20 @@
 #[[
 This source file is part of the Swift Collections Open Source Project
 
-Copyright (c) 2021 Apple Inc. and the Swift project authors
+Copyright (c) 2021-2022 Apple Inc. and the Swift project authors
 Licensed under Apache License v2.0 with Runtime Library Exception
 
 See https://swift.org/LICENSE.txt for license information
 #]]
 
-add_library(PriorityQueueModule
+add_library(HeapModule
   _Node.swift
   Heap.swift
   Heap+ExpressibleByArrayLiteral.swift
   Heap+Invariants.swift
   Heap+UnsafeHandle.swift)
-set_target_properties(PriorityQueueModule PROPERTIES
+set_target_properties(HeapModule PROPERTIES
   INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
 
-_install_target(PriorityQueueModule)
-set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS PriorityQueueModule)
+_install_target(HeapModule)
+set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS HeapModule)
