--- a/Utils/swift-collections.xcworkspace/xcshareddata/xcschemes/Collections.xcscheme
+++ b/Utils/swift-collections.xcworkspace/xcshareddata/xcschemes/Collections.xcscheme
@@ -42,9 +42,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "OrderedCollectionsTests"
-               BuildableName = "OrderedCollectionsTests"
-               BlueprintName = "OrderedCollectionsTests"
+               BlueprintIdentifier = "BitCollectionsTests"
+               BuildableName = "BitCollectionsTests"
+               BlueprintName = "BitCollectionsTests"
                ReferencedContainer = "container:..">
             </BuildableReference>
          </BuildActionEntry>
@@ -70,9 +70,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "PriorityQueueTests"
-               BuildableName = "PriorityQueueTests"
-               BlueprintName = "PriorityQueueTests"
+               BlueprintIdentifier = "HeapTests"
+               BuildableName = "HeapTests"
+               BlueprintName = "HeapTests"
                ReferencedContainer = "container:..">
             </BuildableReference>
          </BuildActionEntry>
@@ -84,9 +84,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BitCollectionsTests"
-               BuildableName = "BitCollectionsTests"
-               BlueprintName = "BitCollectionsTests"
+               BlueprintIdentifier = "OrderedCollectionsTests"
+               BuildableName = "OrderedCollectionsTests"
+               BlueprintName = "OrderedCollectionsTests"
                ReferencedContainer = "container:..">
             </BuildableReference>
          </BuildActionEntry>
@@ -94,7 +94,7 @@
             buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "NO"
-            buildForArchiving = "NO"
+            buildForArchiving = "YES"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
@@ -108,7 +108,7 @@
             buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "NO"
-            buildForArchiving = "NO"
+            buildForArchiving = "YES"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
@@ -154,16 +154,6 @@
                BlueprintIdentifier = "DequeTests"
                BuildableName = "DequeTests"
                BlueprintName = "DequeTests"
-               ReferencedContainer = "container:..">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "PriorityQueueTests"
-               BuildableName = "PriorityQueueTests"
-               BlueprintName = "PriorityQueueTests"
                ReferencedContainer = "container:..">
             </BuildableReference>
          </TestableReference>
