--- a/Utils/swift-collections.xcworkspace/xcshareddata/xcschemes/HeapModule.xcscheme
+++ b/Utils/swift-collections.xcworkspace/xcshareddata/xcschemes/HeapModule.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1250"
+   LastUpgradeVersion = "1410"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,24 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CollectionsBenchmark"
-               BuildableName = "CollectionsBenchmark"
-               BlueprintName = "CollectionsBenchmark"
-               ReferencedContainer = "container:../../swift-collections-benchmark">
+               BlueprintIdentifier = "HeapModule"
+               BuildableName = "HeapModule"
+               BlueprintName = "HeapModule"
+               ReferencedContainer = "container:..">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "HeapTests"
+               BuildableName = "HeapTests"
+               BlueprintName = "HeapTests"
+               ReferencedContainer = "container:..">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,10 +47,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CollectionsBenchmarkTests"
-               BuildableName = "CollectionsBenchmarkTests"
-               BlueprintName = "CollectionsBenchmarkTests"
-               ReferencedContainer = "container:../../swift-collections-benchmark">
+               BlueprintIdentifier = "HeapTests"
+               BuildableName = "HeapTests"
+               BlueprintName = "HeapTests"
+               ReferencedContainer = "container:..">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -61,10 +75,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CollectionsBenchmark"
-            BuildableName = "CollectionsBenchmark"
-            BlueprintName = "CollectionsBenchmark"
-            ReferencedContainer = "container:../../swift-collections-benchmark">
+            BlueprintIdentifier = "HeapModule"
+            BuildableName = "HeapModule"
+            BlueprintName = "HeapModule"
+            ReferencedContainer = "container:..">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
