[CMake] Update CMake build configuration

--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(DequeModule)
 add_subdirectory(HeapModule)
 add_subdirectory(OrderedCollections)
 add_subdirectory(PersistentCollections)
+add_subdirectory(_CollectionsUtilities)
