--- a/Sources/HeapModule/CMakeLists.txt
+++ b/Sources/HeapModule/CMakeLists.txt
@@ -13,6 +13,8 @@ add_library(HeapModule
   Heap+ExpressibleByArrayLiteral.swift
   Heap+Invariants.swift
   Heap+UnsafeHandle.swift)
+target_link_libraries(HeapModule PRIVATE
+  _CollectionsUtilities)
 set_target_properties(HeapModule PROPERTIES
   INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
 
