Update CMake configuration

--- a/Sources/OrderedCollections/CMakeLists.txt
+++ b/Sources/OrderedCollections/CMakeLists.txt
@@ -8,14 +8,16 @@ See https://swift.org/LICENSE.txt for license information
 #]]
 
 add_library(OrderedCollections
+  "HashTable/_HashTable.swift"
   "HashTable/_HashTable+Bucket.swift"
   "HashTable/_HashTable+BucketIterator.swift"
   "HashTable/_HashTable+Constants.swift"
   "HashTable/_HashTable+CustomStringConvertible.swift"
+  "HashTable/_Hashtable+Header.swift"
   "HashTable/_HashTable+Testing.swift"
   "HashTable/_HashTable+UnsafeHandle.swift"
-  "HashTable/_HashTable.swift"
-  "HashTable/_Hashtable+Header.swift"
+  "OrderedDictionary/OrderedDictionary.Elements.swift"
+  "OrderedDictionary/OrderedDictionary.swift"
   "OrderedDictionary/OrderedDictionary+Codable.swift"
   "OrderedDictionary/OrderedDictionary+CustomReflectable.swift"
   "OrderedDictionary/OrderedDictionary+Deprecations.swift"
@@ -31,8 +33,7 @@ add_library(OrderedCollections
   "OrderedDictionary/OrderedDictionary+Sendable.swift"
   "OrderedDictionary/OrderedDictionary+Sequence.swift"
   "OrderedDictionary/OrderedDictionary+Values.swift"
-  "OrderedDictionary/OrderedDictionary.Elements.swift"
-  "OrderedDictionary/OrderedDictionary.swift"
+  "OrderedSet/OrderedSet.swift"
   "OrderedSet/OrderedSet+Codable.swift"
   "OrderedSet/OrderedSet+CustomReflectable.swift"
   "OrderedSet/OrderedSet+Descriptions.swift"
@@ -45,9 +46,14 @@ add_library(OrderedCollections
   "OrderedSet/OrderedSet+Invariants.swift"
   "OrderedSet/OrderedSet+Partial MutableCollection.swift"
   "OrderedSet/OrderedSet+Partial RangeReplaceableCollection.swift"
+  "OrderedSet/OrderedSet+Partial SetAlgebra isDisjoint.swift"
+  "OrderedSet/OrderedSet+Partial SetAlgebra isEqual.swift"
+  "OrderedSet/OrderedSet+Partial SetAlgebra isStrictSubset.swift"
+  "OrderedSet/OrderedSet+Partial SetAlgebra isStrictSuperset.swift"
+  "OrderedSet/OrderedSet+Partial SetAlgebra isSubset.swift"
+  "OrderedSet/OrderedSet+Partial SetAlgebra isSuperset.swift"
   "OrderedSet/OrderedSet+Partial SetAlgebra+Basics.swift"
   "OrderedSet/OrderedSet+Partial SetAlgebra+Operations.swift"
-  "OrderedSet/OrderedSet+Partial SetAlgebra+Predicates.swift"
   "OrderedSet/OrderedSet+RandomAccessCollection.swift"
   "OrderedSet/OrderedSet+ReserveCapacity.swift"
   "OrderedSet/OrderedSet+Sendable.swift"
@@ -55,7 +61,6 @@ add_library(OrderedCollections
   "OrderedSet/OrderedSet+Testing.swift"
   "OrderedSet/OrderedSet+UnorderedView.swift"
   "OrderedSet/OrderedSet+UnstableInternals.swift"
-  "OrderedSet/OrderedSet.swift"
   "Utilities/_UnsafeBitset.swift"
   )
 target_link_libraries(OrderedCollections PRIVATE
