--- a/Sources/_CollectionsUtilities/CMakeLists.txt
+++ b/Sources/_CollectionsUtilities/CMakeLists.txt
@@ -8,6 +8,8 @@ See https://swift.org/LICENSE.txt for license information
 #]]
 
 add_library(_CollectionsUtilities
+  "_SortedCollection.swift"
+  "_UniqueCollection.swift"
   "Array+WithContiguousStorage Compatibility.swift"
   "Debugging.swift"
   "Descriptions.swift"
