--- a/Sources/OrderedCollections/CMakeLists.txt
+++ b/Sources/OrderedCollections/CMakeLists.txt
@@ -16,13 +16,13 @@ add_library(OrderedCollections
   "HashTable/_Hashtable+Header.swift"
   "HashTable/_HashTable+Testing.swift"
   "HashTable/_HashTable+UnsafeHandle.swift"
-  "OrderedDictionary/OrderedDictionary.Elements.swift"
   "OrderedDictionary/OrderedDictionary.swift"
   "OrderedDictionary/OrderedDictionary+Codable.swift"
   "OrderedDictionary/OrderedDictionary+CustomReflectable.swift"
   "OrderedDictionary/OrderedDictionary+Deprecations.swift"
   "OrderedDictionary/OrderedDictionary+Descriptions.swift"
-  "OrderedDictionary/OrderedDictionary+Elements+SubSequence.swift"
+  "OrderedDictionary/OrderedDictionary+Elements.SubSequence.swift"
+  "OrderedDictionary/OrderedDictionary+Elements.swift"
   "OrderedDictionary/OrderedDictionary+Equatable.swift"
   "OrderedDictionary/OrderedDictionary+ExpressibleByDictionaryLiteral.swift"
   "OrderedDictionary/OrderedDictionary+Hashable.swift"
@@ -33,7 +33,6 @@ add_library(OrderedCollections
   "OrderedDictionary/OrderedDictionary+Sendable.swift"
   "OrderedDictionary/OrderedDictionary+Sequence.swift"
   "OrderedDictionary/OrderedDictionary+Values.swift"
-  "OrderedSet/OrderedSet.swift"
   "OrderedSet/OrderedSet+Codable.swift"
   "OrderedSet/OrderedSet+CustomReflectable.swift"
   "OrderedSet/OrderedSet+Descriptions.swift"
@@ -46,14 +45,21 @@ add_library(OrderedCollections
   "OrderedSet/OrderedSet+Invariants.swift"
   "OrderedSet/OrderedSet+Partial MutableCollection.swift"
   "OrderedSet/OrderedSet+Partial RangeReplaceableCollection.swift"
+  "OrderedSet/OrderedSet+Partial SetAlgebra formIntersection.swift"
+  "OrderedSet/OrderedSet+Partial SetAlgebra formSymmetricDifference.swift"
+  "OrderedSet/OrderedSet+Partial SetAlgebra formUnion.swift"
+  "OrderedSet/OrderedSet+Partial SetAlgebra intersection.swift"
   "OrderedSet/OrderedSet+Partial SetAlgebra isDisjoint.swift"
   "OrderedSet/OrderedSet+Partial SetAlgebra isEqual.swift"
   "OrderedSet/OrderedSet+Partial SetAlgebra isStrictSubset.swift"
   "OrderedSet/OrderedSet+Partial SetAlgebra isStrictSuperset.swift"
   "OrderedSet/OrderedSet+Partial SetAlgebra isSubset.swift"
   "OrderedSet/OrderedSet+Partial SetAlgebra isSuperset.swift"
+  "OrderedSet/OrderedSet+Partial SetAlgebra subtract.swift"
+  "OrderedSet/OrderedSet+Partial SetAlgebra subtracting.swift"
+  "OrderedSet/OrderedSet+Partial SetAlgebra symmetricDifference.swift"
+  "OrderedSet/OrderedSet+Partial SetAlgebra union.swift"
   "OrderedSet/OrderedSet+Partial SetAlgebra+Basics.swift"
-  "OrderedSet/OrderedSet+Partial SetAlgebra+Operations.swift"
   "OrderedSet/OrderedSet+RandomAccessCollection.swift"
   "OrderedSet/OrderedSet+ReserveCapacity.swift"
   "OrderedSet/OrderedSet+Sendable.swift"
@@ -61,6 +67,7 @@ add_library(OrderedCollections
   "OrderedSet/OrderedSet+Testing.swift"
   "OrderedSet/OrderedSet+UnorderedView.swift"
   "OrderedSet/OrderedSet+UnstableInternals.swift"
+  "OrderedSet/OrderedSet.swift"
   "Utilities/_UnsafeBitset.swift"
   )
 target_link_libraries(OrderedCollections PRIVATE
