--- a/Sources/PersistentCollections/CMakeLists.txt
+++ b/Sources/PersistentCollections/CMakeLists.txt
@@ -28,7 +28,7 @@ add_library(PersistentCollections
   "Node/_Node+Structural filter.swift"
   "Node/_Node+Structural intersection.swift"
   "Node/_Node+Structural isDisjoint.swift"
-  "Node/_Node+Structural isEqual.swift"
+  "Node/_Node+Structural isEqualSet.swift"
   "Node/_Node+Structural isSubset.swift"
   "Node/_Node+Structural mapValues.swift"
   "Node/_Node+Structural merge.swift"
@@ -85,7 +85,7 @@ add_library(PersistentCollections
   "PersistentSet/PersistentSet+SetAlgebra formUnion.swift"
   "PersistentSet/PersistentSet+SetAlgebra intersection.swift"
   "PersistentSet/PersistentSet+SetAlgebra isDisjoint.swift"
-  "PersistentSet/PersistentSet+SetAlgebra isEqual.swift"
+  "PersistentSet/PersistentSet+SetAlgebra isEqualSet.swift"
   "PersistentSet/PersistentSet+SetAlgebra isStrictSubset.swift"
   "PersistentSet/PersistentSet+SetAlgebra isStrictSuperset.swift"
   "PersistentSet/PersistentSet+SetAlgebra isSubset.swift"
